# apexapp

./: .gitignore  README.md  build_shell_win.sh  index.html  package-lock.json  package.json  prepare_build_for_win7.sh  prepare_macos.sh  setup_and_build.sh  setup_and_build_linux.sh  setup_and_build_macos.sh  setup_and_build_offline.sh  setup_and_build_win10_11.sh  setup_and_build_win7.sh  test-build.sh  vite.config.ts
.github/workflows/: build_macos.txt  build_windows.yml
docs/: development.md  features.md  introduction.md
server/: .env  404.html  Dockerfile  TUNNELS.md  debug_tunnel.py  go.mod  main.go
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.nsidecars.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh
src-tauri/src/: lib.rs  main.rs
